--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
         <title>{{header}}</title>
         <a href="/blog">View Blogs</a>
         <a href="/newpost">New Post</a>
+        <a href="/">Home</a>
         <style type="text/css">
             .error {
                 color: red;
@@ -11,6 +12,26 @@
         </style>
     </head>
 <body>
+              <div style='float: right'>
+                {% if 'user' in session %}
+                  {{ session['user'] }}
+                  <form action="/logout" method="post" id='logout'>
+                    <input type="submit" value="Log Out" />
+                  </form>
+                {% else %}
+                  <a href="/login">login</a> | <a href="/signup">register</a>
+                {% endif %}
+              </div>
+              
+              {% with messages = get_flashed_messages() %}
+              {% if messages %}
+                <ul class=flashes>
+                  {% for message in messages %}
+                  <li>{{ message }}</li>
+                  {% endfor %}
+                </ul>
+              {% endif %}
+            {% endwith %}
 
     {% block content %}
     {% endblock %}
